hphp/hack/test/typecheck/instanceof/instanceof_generic_bad3.php.exp
File "instanceof_generic_bad3.php", line 4, characters 24-24:
Generics are not allowed in this position. (Typing[4306])
