hphp/hack/test/typecheck/instanceof/instanceof_generic_bad3.php
<?hh // partial

function T<T>($a): bool {
  return $a instanceof T;
}
